<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/features_label" />

        <Switch
            android:id="@+id/postion_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feature_position_tracking" />

        <Switch
            android:id="@+id/geocoding_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feature_geocoding" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/position_label"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:drawable/dialog_holo_light_frame">

        <TextView
            android:id="@+id/current_position_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder"
            android:padding="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:drawable/dialog_holo_light_frame">

        <TextView
            android:id="@+id/current_address_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder"
            android:padding="5dp" />

    </LinearLayout>

</LinearLayout>